Adding tasks to automatically set up SSL

--- a/jira/templates/jira.j2
+++ b/jira/templates/jira.j2
@@ -4,7 +4,7 @@
 RUN_AS={{ jira_user }}
 
 # JIRA Linux service controller script
-JIRA_HOME={{ jira_user_home_dir }}/jira/bin
+JIRA_HOME={{ jira_user_home_dir }}/current/bin
 
 jiractl() {
         op=$1
